--- a/assets/scss/Layouts/_products.scss
+++ b/assets/scss/Layouts/_products.scss
@@ -1,6 +1,6 @@
 .products {
     background-color: rgb(255, 255, 255);
-    height: 100vh;
+    // height: 100vh;
     display: flex;
     align-items: center;
     .card-group {
