--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,8 +12,13 @@ html, body {
 
 header {
   background-color: black;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   padding: 0 20px;
+  z-index: 100;
 }
 header nav ul li a {
   font-size: 24px;
@@ -478,6 +483,7 @@ body.show-sidebar-cart #sidebar-cart {
 }
 
 .products {
+  margin-top: 80px;
   background-color: rgb(255, 255, 255);
   display: flex;
   align-items: center;
