--- a/assets/scss/Layouts/_header.scss
+++ b/assets/scss/Layouts/_header.scss
@@ -1,8 +1,12 @@
 header {
     background-color: black;
-    // position: fixed;
+    position: sticky;
+	top: 0;
+	left: 0;
+	right: 0;
     width: 100%;
     padding: 0 20px;
+	z-index: 100;
     nav {
         ul {
             li {
