--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -514,3 +514,6 @@ body.show-sidebar-cart #sidebar-cart {
   color: black;
   cursor: pointer;
 }/*# sourceMappingURL=index.css.map */
+.sp-thongbao {
+  color: red;
+}
