--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -64,25 +64,17 @@
               <option value="samsung">Samsung</option>
             </select>
           </form>
+          <form action="/action_page.php" class="ml-3">
+            <label for="sortByPrice" style="color: white">Sort by</label>
+            <select name="cars" id="sortByPrice">
+              <option id="sort" value="sort">All</option>
+              <option id="low" value="low">Low to high</option>
+              <option id="high" value="high">High to low</option>
+            </select>
+          </form>
         </nav>
-        <aside id="sidebar-cart">
-          <main>
-            <a href="#" class="close-button"><span class="close-icon">X</span></a>
-            <h2>Shopping Bag <span class="count">3</span></h2>
-            <ul class="products" id="tblCart">
-            </ul>
-            <div class="totals">
-              <div class="subtotal">
-                <span class="label">Subtotal:</span> <span class="amount">$54.00</span>
-              </div>
-            </div>
-            <div class="action-buttons">
-              <a class="view-cart-button" href="#">Cart</a><a class="checkout-button" href="#">Checkout</a>
-            </div>
-          </main>
-        </aside>
       </header>
-      <section>
+      <section class="mt-3">
        <div class="tab-content">
         <div role="tabpanel" class="tab-pane in active" id="DanhSachSP">
           <div class="row">
@@ -95,7 +87,7 @@
                 data-target="#myModal"
               >
                 <i class="fa fa-plus mr-1"></i>
-                Thêm Mới
+                Add new product
               </button>
               <!-- END BUTTON THÊM MỚI -->
             </div>
@@ -103,9 +95,10 @@
               <!-- BEGIN TÌM KIẾM -->
               <div class="input-group mb-3">
                 <input
+                  id="search"
                   type="text"
                   class="form-control"
-                  placeholder="Nhập từ khóa"
+                  placeholder="Enter search key"
                   aria-label="Recipient's username"
                   aria-describedby="basic-addon2"
                 />
@@ -157,59 +150,68 @@
                 <input
                   id="name"
                   class="form-control"
-                  placeholder="Nhập vào tên sản phẩm"
+                  placeholder="Enter name"
                 />
+                <span class="sp-thongbao" id="tbName"></span>
               </div>
               <div class="form-group">
                 <label>price</label>
                 <input
                   id="price"
                   class="form-control"
-                  placeholder="Nhập vào giá"
+                  placeholder="Enter price"
                 />
+                <span class="sp-thongbao" id="tbPrice"></span>
               </div>
               <div class="form-group">
                 <label>Screen</label>
                 <input
                   id="screen"
                   class="form-control"
-                  placeholder="Nhập vào giá"
+                  placeholder="Enter screen"
                 />
+                <span class="sp-thongbao" id="tbScreen"></span>
               </div>
               <div class="form-group">
                 <label>Back Camera</label>
                 <input
                   id="backCamera"
                   class="form-control"
-                  placeholder="Nhập vào giá"
+                  placeholder="Enter back camera"
                 />
+                <span class="sp-thongbao" id="tbBackCamera"></span>
               </div>
               <div class="form-group">
                 <label>Front Camera</label>
                 <input
                   id="frontCamera"
                   class="form-control"
-                  placeholder="Nhập vào giá"
+                  placeholder="Enter front camera"
                 />
+                <span class="sp-thongbao" id="tbFrontCamera"></span>
               </div>
               <div class="form-group">
                 <label>Image</label>
                 <input
                   id="image"
                   class="form-control"
-                  placeholder="Nhập vào hình sản phẩm"
+                  placeholder="Enter url image"
                 />
+                <span class="sp-thongbao" id="tbImage"></span>
               </div>
               <div class="form-group">
                 <label>Description</label>
-                <textarea name="" class="form-control" id="description" placeholder="Nhập vào mô tả" cols="30" rows="5"></textarea>
+                <textarea name="" class="form-control" id="description" placeholder="Enter description" cols="30" rows="5"></textarea>
+                <span class="sp-thongbao" id="tbDesc"></span>
               </div>
               <div class="form-group">
                 <label for="">Type </label>
                 <select class="form-control" id="type">
+                  <option value="type">Select type</option>
                   <option value="iphone">Iphone</option>
                   <option value="samsung">Samsung</option>
                 </select>
+                <span class="sp-thongbao" id="tbType"></span>
               </div>
             </div>
             <!-- Modal footer -->
@@ -231,6 +233,7 @@
     ></script>
     <script src="../services/Services.js"></script>
     <script src="../../admin/model/Products.js"></script>
+    <script src="../controller/Validation.js"></script>
     <script src="../controller/admin.js"></script>
   </body>
 </html>
