--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -205,7 +205,7 @@
                 <span class="sp-thongbao" id="tbDesc"></span>
               </div>
               <div class="form-group">
-                <label for="">Type </label>
+                <label for="type">Type </label>
                 <select class="form-control" id="type">
                   <option value="type">Select type</option>
                   <option value="iphone">Iphone</option>
