--- a/assets/scss/Layouts/_header.scss
+++ b/assets/scss/Layouts/_header.scss
@@ -18,6 +18,11 @@ header {
         }
         i {
             color: #fff;
+			transition: all .3s;
+			&:hover {
+				cursor: pointer;
+				color: $secondary;
+			}
         }
         
     }
@@ -25,28 +30,6 @@ header {
 // Import Google Font
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
-// Brand colors
-$primary: #354165;
-$secondary: #4dc0e3;
-
-// Standard colors
-$black: #000;
-$white: #fff;
-$red: #cc0000;
-
-// Shades of gray
-$gray-100: #f0f0f9;
-$gray-200: #e1e1e7;
-$gray-300: #d7d7de;
-$gray-400: #cdcdd1;
-$gray-500: #a5a5aa;
-$gray-600: #98989b;
-$gray-700: #75757a;
-$gray-800: #666669;
-$gray-900: #44444a;
-$gray-1000: #333336;
-$gray-1100: #222224;
-$gray-1200: #131314;
 
 // Mixin to generate hover & active states
 @mixin hover-active() {
