tqtuan 2nd commit

--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -233,7 +233,7 @@
     ></script>
     <script src="../services/Services.js"></script>
     <script src="../../admin/model/Products.js"></script>
-    <script src="../controller/Validation.js"></script>
+    <script src="../../assets/js/Validation.js"></script>
     <script src="../controller/admin.js"></script>
   </body>
 </html>
