--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -125,6 +125,7 @@
                 <th>Image</th>
                 <th>Description</th>
                 <th>Type</th>
+                <th>Act</th>
               </thead>
               <tbody id="tblDanhSachSP"></tbody>
             </table>
@@ -133,6 +134,7 @@
           <br />
         </div>
        </div>
+       
        <div class="modal fade" id="myModal">
         <div class="modal-dialog">
           <div class="modal-content">
