--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -141,80 +141,82 @@
             <!-- Modal Header -->
             <div class="modal-header">
               <h4 class="modal-title">Modal Heading</h4>
-              <button type="button" class="close" data-dismiss="modal">
+              <button type="button" class="close" id="btnClose" data-dismiss="modal" onclick="cancelFunct()">
                 &times;
               </button>
             </div>
             <!-- Modal body -->
-            <div class="modal-body">
-              <div class="form-group">
-                <label>Name</label>
-                <input
-                  id="name"
-                  class="form-control"
-                  placeholder="Enter name"
-                />
-                <span class="sp-thongbao" id="tbName"></span>
-              </div>
-              <div class="form-group">
-                <label>price</label>
-                <input
-                  id="price"
-                  class="form-control"
-                  placeholder="Enter price"
-                />
-                <span class="sp-thongbao" id="tbPrice"></span>
-              </div>
-              <div class="form-group">
-                <label>Screen</label>
-                <input
-                  id="screen"
-                  class="form-control"
-                  placeholder="Enter screen"
-                />
-                <span class="sp-thongbao" id="tbScreen"></span>
-              </div>
-              <div class="form-group">
-                <label>Back Camera</label>
-                <input
-                  id="backCamera"
-                  class="form-control"
-                  placeholder="Enter back camera"
-                />
-                <span class="sp-thongbao" id="tbBackCamera"></span>
-              </div>
-              <div class="form-group">
-                <label>Front Camera</label>
-                <input
-                  id="frontCamera"
-                  class="form-control"
-                  placeholder="Enter front camera"
-                />
-                <span class="sp-thongbao" id="tbFrontCamera"></span>
-              </div>
-              <div class="form-group">
-                <label>Image</label>
-                <input
-                  id="image"
-                  class="form-control"
-                  placeholder="Enter url image"
-                />
-                <span class="sp-thongbao" id="tbImage"></span>
-              </div>
-              <div class="form-group">
-                <label>Description</label>
-                <textarea name="" class="form-control" id="description" placeholder="Enter description" cols="30" rows="5"></textarea>
-                <span class="sp-thongbao" id="tbDesc"></span>
-              </div>
-              <div class="form-group">
-                <label for="type">Type </label>
-                <select class="form-control" id="type">
-                  <option value="type">Select type</option>
-                  <option value="iphone">Iphone</option>
-                  <option value="samsung">Samsung</option>
-                </select>
-                <span class="sp-thongbao" id="tbType"></span>
-              </div>
+            <div class="modal-body" >
+              <form role="form" id="formLogin">
+                <div class="form-group">
+                  <label>Name</label>
+                  <input
+                    id="name"
+                    class="form-control"
+                    placeholder="Enter name"
+                  />
+                  <span class="sp-thongbao" id="tbName"></span>
+                </div>
+                <div class="form-group">
+                  <label>price</label>
+                  <input
+                    id="price"
+                    class="form-control"
+                    placeholder="Enter price"
+                  />
+                  <span class="sp-thongbao" id="tbPrice"></span>
+                </div>
+                <div class="form-group">
+                  <label>Screen</label>
+                  <input
+                    id="screen"
+                    class="form-control"
+                    placeholder="Enter screen"
+                  />
+                  <span class="sp-thongbao" id="tbScreen"></span>
+                </div>
+                <div class="form-group">
+                  <label>Back Camera</label>
+                  <input
+                    id="backCamera"
+                    class="form-control"
+                    placeholder="Enter back camera"
+                  />
+                  <span class="sp-thongbao" id="tbBackCamera"></span>
+                </div>
+                <div class="form-group">
+                  <label>Front Camera</label>
+                  <input
+                    id="frontCamera"
+                    class="form-control"
+                    placeholder="Enter front camera"
+                  />
+                  <span class="sp-thongbao" id="tbFrontCamera"></span>
+                </div>
+                <div class="form-group">
+                  <label>Image</label>
+                  <input
+                    id="image"
+                    class="form-control"
+                    placeholder="Enter url image"
+                  />
+                  <span class="sp-thongbao" id="tbImage"></span>
+                </div>
+                <div class="form-group">
+                  <label>Description</label>
+                  <textarea name="" class="form-control" id="description" placeholder="Enter description" cols="30" rows="5"></textarea>
+                  <span class="sp-thongbao" id="tbDesc"></span>
+                </div>
+                <div class="form-group">
+                  <label for="type">Type </label>
+                  <select class="form-control" id="type">
+                    <option value="type">Select type</option>
+                    <option value="iphone">Iphone</option>
+                    <option value="samsung">Samsung</option>
+                  </select>
+                  <span class="sp-thongbao" id="tbType"></span>
+                </div>
+              </form>
             </div>
             <!-- Modal footer -->
             <div id="modal-footer" class="modal-footer"></div>
@@ -234,7 +236,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="../services/Services.js"></script>
-    <script src="../../admin/model/Products.js"></script>
+    <script src="../model/Product.js"></script>
     <script src="../controller/admin.js"></script>
     <script src="../controller/Validation.js"></script>
   </body>
