--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -58,7 +58,7 @@
           </div>
           <form action="/action_page.php">
             <label for="filter" style="color: white">Filter</label>
-            <select name="cars" id="filter">
+            <select name="cars" id="filter" onselect="getProductList()">
               <option value="all">All</option>
               <option value="iphone">Iphone</option>
               <option value="samsung">Samsung</option>
